Sidebar horizontal scrolling fix.
Removing the styled scrollbars resulted in horizontal scrolling.
Padding and margins changes fixed these issues.

--- a/f-tep-portal/src/main/resources/app/main.css
+++ b/f-tep-portal/src/main/resources/app/main.css
@@ -984,6 +984,7 @@ input {
   padding-top: 0;
 }
 #search-panel md-datepicker {
+  padding: 0;
   max-width: 100%;
 }
 #search-panel #searchForm {
@@ -1094,9 +1095,6 @@ input {
   background-color: transparent;
   border: none;
   box-shadow: none;
-}
-#sidebar-left .panel .panel-body {
-  padding-right: 0;
 }
 #sidebar-left .scrollme {
   display: -ms-flexbox;
@@ -1540,6 +1538,7 @@ pre {
 #navbar {
   background-color: #f8f8f8;
   border: none;
+  border-radius: 0;
   height: 50px;
   margin-bottom: 0;
   z-index: 50;
