--- a/f-tep-portal/src/main/resources/app/styles/less/explorer/sidebar/search.less
+++ b/f-tep-portal/src/main/resources/app/styles/less/explorer/sidebar/search.less
@@ -8,6 +8,7 @@
         padding-top: 0;
     }
     md-datepicker {
+        padding: 0;
         max-width: 100%;
     }
     #searchForm {
