--- a/f-tep-portal/src/main/resources/app/styles/less/explorer/sidebar/sidebar.less
+++ b/f-tep-portal/src/main/resources/app/styles/less/explorer/sidebar/sidebar.less
@@ -60,7 +60,7 @@
         border: none;
         box-shadow: none;
         .panel-body {
-            padding-right: 0;
+            //padding-right: 0; - required for styled sidebar
         }
     }
     .scrollme {
