--- a/f-tep-portal/src/main/resources/app/styles/less/navbar.less
+++ b/f-tep-portal/src/main/resources/app/styles/less/navbar.less
@@ -2,6 +2,7 @@
 #navbar {
     background-color: @bg;
     border: none;
+    border-radius: 0;
     height: @navbar-height;
     margin-bottom: 0;
     z-index: 50;
